<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Enter value"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="RM"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/payment_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="0.00"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            />

        <com.quseit.payapp.widget.IconText
            android:id="@+id/mumber_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/membership_font"
            android:textColor="@color/text_gray"
            android:textSize="28sp"
            />
        <ImageView
            android:id="@+id/sure_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/sure"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/gray"/>

    <FrameLayout
        android:id="@+id/remark_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:gravity="start"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <com.quseit.payapp.widget.IconText
            android:id="@+id/desc_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/edit_font"
            android:textColor="@color/text_gray"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/remark_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:hint="In-store payment"
            android:textColor="@color/white"
            />
    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_centerVertical="true"
            android:background="@color/gray"/>

        <com.quseit.payapp.widget.IconText
            android:id="@+id/cash_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/scan_icon"
            android:background="@drawable/cash_click_selector"
            android:gravity="center"
            android:text="@string/cash_font"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:visibility="invisible"/>

        <com.quseit.payapp.widget.IconText
            android:id="@+id/scan_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/scan_click_selector"
            android:gravity="center"
            android:text="@string/qrcode_font"
            android:textColor="@color/purple_color"
            android:textSize="36sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cash_icon"
            android:layout_marginLeft="30dp"
            android:text="Payment Method"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <com.quseit.payapp.widget.NumberKeyboard
        android:id="@+id/keyboard_number"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        />
</LinearLayout>