...
                android:text="@string/qrcode_font"
                android:textColor="@color/purple_color"
                android:background="@drawable/black_click_selector"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/blue_click_selector"
            android:layout_marginTop="10dp"
            android:text="OK"/>
    </LinearLayout>
...
